--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,11 +1,37 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      About
+      Materi
     </ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only>
+        <ion-icon name="information"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-
+<ion-grid>
+  <ion-row>
+    <ion-col height-100 text-center class="judul">
+    STRUKTUR HIRARKI BASIS DATA
+    </ion-col>
+  </ion-row>
+  <ion-row>
+  	<ion-col text-center>
+  	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+  	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+  	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+  	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+  	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  	</ion-col>
+  </ion-row>
+  <ion-row>
+  	<ion-col text-center>
+  	<button ion-button>Default</button>
+  	</ion-col>
+  </ion-row>
+</ion-grid>
 </ion-content>
