--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -11,7 +11,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content padding class="background">
 <ion-grid>
   <ion-row>
     <ion-col height-100 text-center class="judul">
@@ -30,7 +30,7 @@
   </ion-row>
   <ion-row>
   	<ion-col text-center>
-  	<button ion-button>Default</button>
+  	<button ion-button class="readm">READ MORE</button>
   	</ion-col>
   </ion-row>
 </ion-grid>
