--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,17 +1,36 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Contact
+      ABOUT US
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <ion-list-header>Follow us on Twitter</ion-list-header>
-    <ion-item>
-      <ion-icon name="ionic" item-start></ion-icon>
-      @ionicframework
-    </ion-item>
-  </ion-list>
+  <ion-grid>
+    <ion-row>
+      <ion-col text-center>
+      <img src="../assets/img/logo-beta2.png" align="middle">
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col text-center>
+      <h1>JAGUAR-TEAM</h1>
+      <h2>CEO</h2>
+      <h3>Milania Dafa Ramadani</h3>
+      <h2>DEVELOPER</h2>
+      <h3>Gempur Bayu Aji</h3>
+      <h2>DESIGNER</h2>
+      <h3>Hawley Naufal Muhammad</h3>
+      <h2>CONTENT CREATOR</h2>
+      <h3>Gilang Setiawan SSP <br>
+      M Tri Fakhreri Arsyad</h3>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col class="version">
+      <p>Version 1.0.1</p>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
